project complete only local computer image upload remaining

--- a/MyUsers/templates/MyUsers/register.html
+++ b/MyUsers/templates/MyUsers/register.html
@@ -107,14 +107,18 @@
         </p>
     </div>
     
-    <footer id="footer" class="text-center p-8 bg-[#d9d9d9]">
+    <footer id="footer" class="text-center py-8">
         <div class="flex gap-2 justify-center mb-5">
-            <img src="/static/img/Instagram.png" alt="" class="size-8">
-            <img src="/static/img/Linkedin.png" alt="" class="size-8">
-            <img src="/static/img/Facebook.png" alt="" class="size-8">
-            <img src="/static/img/Youtube.png" alt="" class="size-8">
+            <img src="https://github.com/Divesh-Kshirsagar/Blog-Project/blob/master/static/img/Instagram.png?raw=true"
+                alt="" class="size-8">
+            <img src="https://github.com/Divesh-Kshirsagar/Blog-Project/blob/master/static/img/Linkedin.png?raw=true" alt=""
+                class="size-8">
+            <img src="https://github.com/Divesh-Kshirsagar/Blog-Project/blob/master/static/img/Facebook.png?raw=true" alt=""
+                class="size-8">
+            <img src="https://github.com/Divesh-Kshirsagar/Blog-Project/blob/master/static/img/Youtube.png?raw=true" alt=""
+                class="size-8">
         </div>
-        <p class="text-lg jaldi-regular">Made by Divesh Kshirsagar @2024</p>
+        <p class="text-lg aclonica-regular">Made by Divesh Kshirsagar @2024</p>
     </footer>
 </main>
 {% endblock content %}
