project complete only local computer image upload remaining

--- a/MyUsers/templates/MyUsers/register.html
+++ b/MyUsers/templates/MyUsers/register.html
@@ -107,7 +107,7 @@
         </p>
     </div>
     
-    <footer id="footer" class="text-center py-8">
+    <footer id="footer" class="text-center py-8 bg-[#d9d9d9]">
         <div class="flex gap-2 justify-center mb-5">
             <img src="https://github.com/Divesh-Kshirsagar/Blog-Project/blob/master/static/img/Instagram.png?raw=true"
                 alt="" class="size-8">
